--- a/InternalUAMTv/InternalUAMTv/detail/detail.css
+++ b/InternalUAMTv/InternalUAMTv/detail/detail.css
@@ -277,3 +277,141 @@ header nav ul li:hover {
     width: 400px;
     height: 260px;
 }
+
+
+
+
+/*Notification syle*/
+
+.sidenav {
+right: 0px;
+position: fixed;
+right: 0;
+top: 124px;
+z-index: 5;
+height: 100%;
+width: 0;
+background-color: #111;
+overflow-x: hidden;
+transition: 0.5s;
+}
+
+.sidenav a {
+padding: 8px 8px 8px 32px;
+text-decoration: none;
+font-size: 25px;
+color: #818181;
+display: block;
+transition: 0.4s;
+}
+
+.sidenav a:hover {
+color: #f1f1f1;
+}
+
+.notification_header {
+color: white;
+font-weight: 509px;
+background: #160926;
+width: 100%;
+display: flex;
+align-items: center;
+padding-left: 2px;
+font-size: 34px;
+font-weight: 700;
+box-shadow: 1px 6px 5px -2px rgb(8, 4, 12);
+height: 112px;
+z-index: 12;
+}
+
+.no_notification {
+color: white;
+height: 100%;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+font-size: 151px;
+background: #12091E;
+}
+
+h2 {
+position: absolute;
+font-size: 31px;
+}
+
+.fa_bell {
+position: relative;
+top: -22%;
+background: gray;
+border-radius: 50%;
+height: 209px;
+width: 209px;
+text-align: center;
+margin-top: 4px;
+font-size: 145px;
+}
+
+.fa-arrow-left:hover {
+color: rgba(255, 132, 0, 1);
+}
+
+.no-notification {
+position: relative;
+bottom: 16%;
+}
+
+
+/*Network and internet section style*/
+
+.network_header {
+color: white;
+font-weight: 509px;
+background: #160926;
+width: 100%;
+display: flex;
+align-items: center;
+padding-left: 2px;
+font-size: 34px;
+font-weight: 700;
+box-shadow: 1px 6px 5px -2px rgb(8, 4, 12);
+height: 112px;
+z-index: 12;
+}
+
+.avail_network {
+font-weight: bold;
+font-size: 25px;
+color: rgba(255, 132, 0, 1);
+padding: 31px;
+background: #12091E;
+}
+
+.avail_network_body {
+height: 100vh;
+background: #12091E;
+color: white;
+font-size: px;
+font-size: 26px;
+}
+
+.wifi_icon {
+font-size: 34px;
+}
+
+.wifi_name {
+font-size: 27px;
+position: relative;
+top: -7px;
+}
+
+.conented_wifi_txt {
+font-size: 21px;
+position: absolute;
+left: 2%;
+}
+
+.lock_icon {
+color: white;
+}
+
