--- a/InternalUAMTv/InternalUAMTv/home/home.css
+++ b/InternalUAMTv/InternalUAMTv/home/home.css
@@ -302,12 +302,12 @@ span #detail {
     transform: translate(-50%, -50%);
 }
 
-/ show scale effect / .carousel .thumb-wrapper:hover {
+.carousel .cardhover {
     transform: scale(1.2);
-    transition: 2s;
+    transition: 0.6s;
 }
 
-/ carsoul / .carousel .carousel-item {
+.carousel .carousel-item {
     text-align: center;
     overflow: hidden;
 }
