--- a/InternalUAMTv/InternalUAMTv/Video/video.css
+++ b/InternalUAMTv/InternalUAMTv/Video/video.css
@@ -35,20 +35,31 @@
 .video-js .vjs-progress-control .vjs-load-progress {
     background-color: rgba(0, 177, 255, .4);
     border-radius: 4px;
-    background: gray;
+    background: none !important;
 }
 .video-js .vjs-progress-control .vjs-play-progress {
-    background-color: #FF8400;
-    border-radius: 4px
+    background-color: #FF8400 !important;
+    border-radius: 4px !important;
 }
 .video-js .vjs-time-control {
-    font-size: 30px;
+    font-size: 25px !important;
     line-height: 40px;
 }
 .video-js .vjs-control-bar .vjs-button {
     height: 100%;
     padding: 0;
     margin: 0;
+}
+.video-js .vjs-progress-control .vjs-load-progress {
+    border-radius: 4px;
+    width: 100%;
+    background: white !important;
+}
+.video-js .vjs-control-bar {
+    z-index: 5;
+    background: none !important;
+    position: absolute !important;
+    bottom: 24px !important;
 }
 #player_one {
     position: relative;
