--- a/InternalUAMTv/InternalUAMTv/detail/detail.css
+++ b/InternalUAMTv/InternalUAMTv/detail/detail.css
@@ -1,12 +1,22 @@
 body {
-            margin: 0;
-            padding: 0;
-            font-family: "Roboto", sans-serif;
-            color: black;
-            font-size: 43px;
-           background: linear-gradient(#11071ff0, #130921F0,#140922A1);      
-        }
-    
+    margin: 0;
+    padding: 0;
+    font-family: "Roboto", sans-serif;
+    color: black;
+    font-size: 43px;
+    background: linear-gradient(#11071ff0, #130921F0, #140922A1);
+}
+#menu ul {
+    list-style: none;
+}
+#menu li {
+    padding: 0px 40px 0px 23px;
+    display: inline;
+    overflow: auto;
+    font-size: 26px;
+    position: relative;
+    top: 31px;
+}
 header {
     width: 100%;
     font-size: 42px;
@@ -15,20 +25,17 @@ header {
     position: fixed;
     z-index: 2;
     padding: 18px 8px 0px 18px;
-    top :0;
+    top: 0;
 }
-
 header img {
     height: 55px;
     margin-top: 14px;
 }
-
 header nav {
     font-size: 32px;
     color: white;
     float: right;
 }
-
 header nav ul li {
     display: inline-block;
     padding: 18px 18px;
@@ -36,50 +43,47 @@ header nav ul li {
     background-color: #291b3c;
     margin-right: 10px;
 }
-
-#fa-user , #fa-wifi , #fa-bell{
-	width: 50px;
+#fa-user,
+#fa-wifi,
+#fa-bell {
+    width: 50px;
     height: 40px;
     text-align: center;
 }
 header nav ul li:nth-child(2) {
     position: relative;
 }
-
- #badge{
+#badge {
     position: absolute;
     right: 7px;
     top: 3px;
     border-radius: 50%;
     background: red;
     font-size: 21px;
-   } 
-   
-.user_name{
-	 position: relative;
-      right: 5px;
 }
-  #circle_of_cast{
-  font-size: 16px !important;
-  }
-
+.user_name {
+    position: relative;
+    right: 5px;
+}
+#circle_of_cast {
+    font-size: 16px !important;
+}
 header nav ul li:hover {
     display: inline-block;
     padding: 18px 18px;
     color: rgba(255, 132, 0, 1)
 }
-.main_container{
-	height: 100vh;
+.main_container {
+    height: 100vh;
     width: 100%;
     color: white;
     margin-top: 67px;
     position: relative;
     padding: 66px;
     background: linear-gradient(rgba(21, 9, 36, 0.7), rgba(20, 9, 34, 0.7), rgba(21, 9, 36, 1)), url(../images/rightBacground.png);
-
-	}
-.main_container h1{
-	font-weight :bold
+}
+.main_container h1 {
+    font-weight: bold
 }
 .play_btn {
     width: 200px;
@@ -103,8 +107,16 @@ header nav ul li:hover {
     top: 0;
     border-radius: 9px 0px 0px 9px;
 }
+.fa-star {
+    padding: 17.5px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    border-radius: 9px 0px 0px 9px;
+    background: #a29595;
+}
 .watch_btn {
-   width: 200px;
+    width: 244px;
     border-radius: 9px;
     height: 58px;
     background: #706382;
@@ -114,8 +126,9 @@ header nav ul li:hover {
     font-size: 23px;
     color: white;
     font-weight: bold;
+    padding-left: 62px;
+    padding-left: 62px;
 }
-
 #fa_star {
     background: #a099a9a1;
     padding: 15px;
@@ -124,9 +137,8 @@ header nav ul li:hover {
     top: 0;
     border-radius: 9px 0px 0px 9px;
 }
-
-#heart_icon{
-   position: relative;
+#heart_icon {
+    position: relative;
     top: 7px;
     font-size: 37px;
     left: 6%;
@@ -134,79 +146,73 @@ header nav ul li:hover {
     border-radius: 50%;
     background: #706382;
 }
-  h1{
-  font-size: 60px;
-  }
-  .type{
-  font-size: 23px;
-  }
-  span .fa-circle{
+h1 {
+    font-size: 60px;
+}
+.type {
+    font-size: 23px;
+}
+span .fa-circle {
     margin-left: 12px;
     font-size: 24px;
-  }
-.age{
-	background: gray;
+}
+.age {
+    background: gray;
     margin-left: 18px;
     border-radius: 4px;
     font-size: 23px;
     padding: 5px 15px 3px 14px;
 }
-.circle{
-	font-size: 18px;
+.circle {
+    font-size: 18px;
 }
-.rating{
-	font-size: 25px;
+.rating {
+    font-size: 25px;
 }
-.description p{
-	font-size: 26px;
-	color :white;
+.description p {
+    font-size: 26px;
+    color: white;
 }
-.category_text p{
-	font-size: 28px;
-	color :white;
-	font-weight: bold;
-}
-.d-flex p .fa-circle{
-	font-size: 17px;
-}
-
-.cast{
-	font-size: 28px;
+.category_text p {
+    font-size: 28px;
+    color: white;
     font-weight: bold;
 }
-.cast_description{
-	font-size: 23px;
+.d-flex p .fa-circle {
+    font-size: 17px;
 }
-.see_more{
+.cast {
+    font-size: 28px;
+    font-weight: bold;
+}
+.cast_description {
+    font-size: 23px;
+}
+.see_more {
     font-size: 23px;
     font-weight: bold;
 }
-.more_like{
+.more_like {
     font-weight: bold;
     font-size: 25PX;
 }
-#documentry{
-   font-weight: bold;
+#documentry {
+    font-weight: bold;
     position: relative;
     left: 5%;
-    top :19px;
+    top: 19px;
 }
-/ carsoul /
-
-.carousel .carousel-item {
+/ carsoul / .carousel .carousel-item {
     text-align: center;
     overflow: hidden;
 }
-
 .carousel .carousel-item h4 {
     font-family: 'Varela Round', sans-serif;
 }
-
 .carousel .carousel-item img {
     max-width: 100%;
     display: inline-block;
 }
-
 .carousel .carousel-item .btn {
     border-radius: 0;
     font-size: 12px;
@@ -217,29 +223,24 @@ header nav ul li:hover {
     padding: 6px 15px;
     margin-top: 5px;
 }
-
 .carousel .carousel-item .btn:hover {
     background: #8c5bff;
 }
-
 .carousel .carousel-item .btn i {
     font-size: 14px;
     font-weight: bold;
     margin-left: 5px;
 }
-
 .carousel .thumb-wrapper {
     margin: 5px;
     text-align: left;
     background: #fff;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
 }
-
 .carousel .thumb-content {
     padding: 15px;
     font-size: 13px;
 }
-
 .carousel-control-prev,
 .carousel-control-next {
     height: 44px;
@@ -247,10 +248,9 @@ header nav ul li:hover {
     background: none;
     margin: auto 0;
 }
-
 .carousel-control-prev i,
 .carousel-control-next i {
-   font-size: 45px;
+    font-size: 45px;
     position: absolute;
     top: 50%;
     display: inline-block;
@@ -267,11 +267,9 @@ header nav ul li:hover {
     border-radius: 50%;
     padding: 18px;
 }
-
 .carousel-control-prev i {
     margin-left: -3px;
 }
-
 .carousel-control-next i {
     margin-right: -3px;
 }
@@ -279,141 +277,120 @@ header nav ul li:hover {
     width: 400px;
     height: 260px;
 }
-
-
-
-
 /*Notification syle*/
 
 .sidenav {
-right: 0px;
-position: fixed;
-right: 0;
-top: 124px;
-z-index: 5;
-height: 100%;
-width: 0;
-background-color: #111;
-overflow-x: hidden;
-transition: 0.5s;
+    right: 0px;
+    position: fixed;
+    right: 0;
+    top: 124px;
+    z-index: 5;
+    height: 100%;
+    width: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
 }
-
 .sidenav a {
-padding: 8px 8px 8px 32px;
-text-decoration: none;
-font-size: 25px;
-color: #818181;
-display: block;
-transition: 0.4s;
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.4s;
 }
-
 .sidenav a:hover {
-color: #f1f1f1;
+    color: #f1f1f1;
 }
-
 .notification_header {
-color: white;
-font-weight: 509px;
-background: #160926;
-width: 100%;
-display: flex;
-align-items: center;
-padding-left: 2px;
-font-size: 34px;
-font-weight: 700;
-box-shadow: 1px 6px 5px -2px rgb(8, 4, 12);
-height: 112px;
-z-index: 12;
+    color: white;
+    font-weight: 509px;
+    background: #160926;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding-left: 2px;
+    font-size: 34px;
+    font-weight: 700;
+    box-shadow: 1px 6px 5px -2px rgb(8, 4, 12);
+    height: 112px;
+    z-index: 12;
 }
-
 .no_notification {
-color: white;
-height: 100%;
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
-font-size: 151px;
-background: #12091E;
+    color: white;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 151px;
+    background: #12091E;
 }
-
 h2 {
-position: absolute;
-font-size: 31px;
+    position: absolute;
+    font-size: 31px;
 }
-
 .fa_bell {
-position: relative;
-top: -22%;
-background: gray;
-border-radius: 50%;
-height: 209px;
-width: 209px;
-text-align: center;
-margin-top: 4px;
-font-size: 145px;
+    position: relative;
+    top: -22%;
+    background: gray;
+    border-radius: 50%;
+    height: 209px;
+    width: 209px;
+    text-align: center;
+    margin-top: 4px;
+    font-size: 145px;
 }
-
 .fa-arrow-left:hover {
-color: rgba(255, 132, 0, 1);
+    color: rgba(255, 132, 0, 1);
 }
-
 .no-notification {
-position: relative;
-bottom: 16%;
+    position: relative;
+    bottom: 16%;
 }
-
-
 /*Network and internet section style*/
 
 .network_header {
-color: white;
-font-weight: 509px;
-background: #160926;
-width: 100%;
-display: flex;
-align-items: center;
-padding-left: 2px;
-font-size: 34px;
-font-weight: 700;
-box-shadow: 1px 6px 5px -2px rgb(8, 4, 12);
-height: 112px;
-z-index: 12;
+    color: white;
+    font-weight: 509px;
+    background: #160926;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding-left: 2px;
+    font-size: 34px;
+    font-weight: 700;
+    box-shadow: 1px 6px 5px -2px rgb(8, 4, 12);
+    height: 112px;
+    z-index: 12;
 }
-
 .avail_network {
-font-weight: bold;
-font-size: 25px;
-color: rgba(255, 132, 0, 1);
-padding: 31px;
-background: #12091E;
+    font-weight: bold;
+    font-size: 25px;
+    color: rgba(255, 132, 0, 1);
+    padding: 31px;
+    background: #12091E;
 }
-
 .avail_network_body {
-height: 100vh;
-background: #12091E;
-color: white;
-font-size: px;
-font-size: 26px;
+    height: 100vh;
+    background: #12091E;
+    color: white;
+    font-size: px;
+    font-size: 26px;
 }
-
 .wifi_icon {
-font-size: 34px;
+    font-size: 34px;
 }
-
 .wifi_name {
-font-size: 27px;
-position: relative;
-top: -7px;
+    font-size: 27px;
+    position: relative;
+    top: -7px;
 }
-
 .conented_wifi_txt {
-font-size: 21px;
-position: absolute;
-left: 2%;
+    font-size: 21px;
+    position: absolute;
+    left: 2%;
 }
-
 .lock_icon {
-color: white;
+    color: white;
 }
-
