--- a/InternalUAMTv/InternalUAMTv/home/home.css
+++ b/InternalUAMTv/InternalUAMTv/home/home.css
@@ -750,3 +750,22 @@ h2 {
     font-style: oblique;
     color: rgba(255, 132, 0, 1);
     font-weight: bold;
+}
+
+.activeSeeMoreCat{
+	    color: rgba(255, 132, 0, 1);
+	    font-weight: bold;
+	    
+}
+
+.activeSeeMoreView{
+	  color: rgba(255, 132, 0, 1);
+	    font-weight: bold;
+	    
+}
+
+.activeSeeMoreRecent{
+	  color: rgba(255, 132, 0, 1);
+	    font-weight: bold;
+}
+
