--- a/InternalUAMTv/InternalUAMTv/detail/detail.css
+++ b/InternalUAMTv/InternalUAMTv/detail/detail.css
@@ -1,6 +1,3 @@
-
-
-
 body {
     margin: 0;
     padding: 0;
@@ -13,12 +10,13 @@ body {
     list-style: none;
 }
 #menu li {
-    padding: 0px 40px 0px 23px;
+    padding: 0px 0px 0px 23px;
     display: inline;
     overflow: auto;
     font-size: 26px;
     position: relative;
-    top: 31px;
+    top: 9px;
+    right: 3.5%;
 }
 header {
     width: 100%;
@@ -83,9 +81,8 @@ header nav ul li:hover {
     margin-top: 67px;
     position: relative;
     padding: 66px;
-    background-size:cover;
-    background-repeat:no-repeat
-    
+    background-size: cover;
+    background-repeat: no-repeat
 }
 .main_container h1 {
     font-weight: bold
@@ -199,7 +196,8 @@ span .fa-circle {
     padding: 5px 15px 3px 14px;
 }
 .circle {
-    font-size: 18px;
+    font-size: 16px;
+    vertical-align: middle;
 }
 .rating {
     font-size: 25px;
@@ -406,7 +404,6 @@ h2 {
     padding: 31px;
     background: #12091E;
 }
-
 .avail_network_body {
     height: 100vh;
     background: #12091E;
@@ -429,4 +426,97 @@ h2 {
 }
 .lock_icon {
     color: white;
+}
+
+
+
+
+
+
+
+
+@keyframes ldio-eon67kjyqwt {
+0% { opacity: 1 }
+100% { opacity: 0 }
+}
+.ldio-eon67kjyqwt div {
+left: 94px;
+top: 48px;
+position: absolute;
+animation: ldio-eon67kjyqwt linear 1s infinite;
+background: #82777a;
+width: 12px;
+height: 24px;
+border-radius: 6px / 12px;
+transform-origin: 6px 52px;
+}.ldio-eon67kjyqwt div:nth-child(1) {
+transform: rotate(0deg);
+animation-delay: -0.9166666666666666s;
+background: #82777a;
+}.ldio-eon67kjyqwt div:nth-child(2) {
+transform: rotate(30deg);
+animation-delay: -0.8333333333333334s;
+background: #82777a;
+}.ldio-eon67kjyqwt div:nth-child(3) {
+transform: rotate(60deg);
+animation-delay: -0.75s;
+background: #82777a;
+}.ldio-eon67kjyqwt div:nth-child(4) {
+transform: rotate(90deg);
+animation-delay: -0.6666666666666666s;
+background: #82777a;
+}.ldio-eon67kjyqwt div:nth-child(5) {
+transform: rotate(120deg);
+animation-delay: -0.5833333333333334s;
+background: #82777a;
+}.ldio-eon67kjyqwt div:nth-child(6) {
+transform: rotate(150deg);
+animation-delay: -0.5s;
+background: #82777a;
+}.ldio-eon67kjyqwt div:nth-child(7) {
+transform: rotate(180deg);
+animation-delay: -0.4166666666666667s;
+background: #82777a;
+}.ldio-eon67kjyqwt div:nth-child(8) {
+transform: rotate(210deg);
+animation-delay: -0.3333333333333333s;
+background: #82777a;
+}.ldio-eon67kjyqwt div:nth-child(9) {
+transform: rotate(240deg);
+animation-delay: -0.25s;
+background: #82777a;
+}.ldio-eon67kjyqwt div:nth-child(10) {
+transform: rotate(270deg);
+animation-delay: -0.16666666666666666s;
+background: #82777a;
+}.ldio-eon67kjyqwt div:nth-child(11) {
+transform: rotate(300deg);
+animation-delay: -0.08333333333333333s;
+background: #82777a;
+}.ldio-eon67kjyqwt div:nth-child(12) {
+transform: rotate(330deg);
+animation-delay: 0s;
+background: #82777a;
+}
+.loadingio-spinner-spinner-rexyx9adxl {
+width: 200px;
+height: 200px;
+display: inline-block;
+overflow: hidden;
+background: none;
+position: absolute;
+left: 45%;
+top: 37%;
+}
+.ldio-eon67kjyqwt {
+width: 100%;
+height: 100%;
+position: relative;
+transform: translateZ(0) scale(1);
+backface-visibility: hidden;
+transform-origin: 0 0; / see note above /
+}
+.ldio-eon67kjyqwt div { box-sizing: content-box; }
+.view_Section{
+	display : none;
 }
