--- a/InternalUAMTv/InternalUAMTv/detail/detail.css
+++ b/InternalUAMTv/InternalUAMTv/detail/detail.css
@@ -161,6 +161,9 @@ header nav ul li:hover {
     padding-left: 62px;
     padding-left: 62px;
 }
+.after_click {
+    opacity: 0.5;
+}
 #fa_star {
     background: #a099a9a1;
     padding: 15px;
