--- a/InternalUAMTv/InternalUAMTv/home/home.css
+++ b/InternalUAMTv/InternalUAMTv/home/home.css
@@ -17,9 +17,6 @@ header {
 header img {
     height: 55px;
     margin-top: 14px;
-    position: absolute;
-    top: 1%;
-    left: 1%;
 }
 
 header nav {
@@ -182,7 +179,7 @@ span #detail {
     padding-left: 28px;
 }
 
-.fa-play {
+.ply_now_style{
     background: rgb(255, 170, 79);
     padding: 15px;
     position: absolute;
@@ -304,7 +301,7 @@ span #detail {
 
 .img-fluid {
     position: relative;
-    height: 200px !important;
+    height: 238px !important;
 }
 
 .catagory_name_style {
@@ -318,14 +315,14 @@ span #detail {
 }
 
 .carousel .cardhover {
-    transform: scale(1.2);
+    transform: scale(1.04);
     transition: 0.6s;
 }
 
 
 .catCardHover{
-	transform: scale(1.1);
-	transition: 0.4s;
+	transform: scale(1.04);
+    transition: 0.6s;
 }
 
 .carousel .carousel-item {
@@ -364,10 +361,11 @@ span #detail {
 }
 
 .carousel .thumb-wrapper {
-    margin: 5px;
+    margin: -9px;
     text-align: left;
     background: #fff;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
+    height: 22vh;
 }
 
 .carousel .thumb-content {
@@ -389,13 +387,17 @@ span #detail {
     position: absolute;
     top: 50%;
     display: inline-block;
-    margin: -22px 117px 0 135px;
     z-index: 5;
     left: 0;
     right: 0;
-    color: rgba(255, 132, 0, 1) !important;
     text-shadow: none;
     font-weight: bold;
+    color: white !important;
+    background: #000000;
+    border-radius: 50%;
+    width: 44px;
+    height: 44px;
+    margin: -22px 117px 0 160px;
 }
 
 .carousel-control-prev i {
