--- a/InternalUAMTv/InternalUAMTv/home/home.css
+++ b/InternalUAMTv/InternalUAMTv/home/home.css
@@ -316,7 +316,7 @@ span #detail {
     font-weight: bold;
     letter-spacing: 1px;
     left: 50%;
-    top: 84%;
+    top: 78%;
     transform: translate(-50%, -50%);
 }
 
@@ -369,7 +369,7 @@ span #detail {
 .carousel .thumb-wrapper {
     margin: 5px;
     text-align: left;
-    background: #fff;
+    background: none !important;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
     height: 20vh;
 }
@@ -568,7 +568,7 @@ span #detail {
 .card {
     position: relative;
     border: none !important;
-    background: black;
+    background: none !important;
 }
 
 .category_type {
@@ -772,4 +772,9 @@ h2 {
 	  color: rgba(255, 132, 0, 1);
 	    font-weight: bold;
 }
-
+ .image_placeholder{
+	 background: url('../images/placeholder.png') no-repeat;
+	 width: 26rem;
+     height: 289px;
+     border-radius: 12px;
+	}
