--- a/InternalUAMTv/InternalUAMTv/Search/search.css
+++ b/InternalUAMTv/InternalUAMTv/Search/search.css
@@ -5,7 +5,7 @@
       color: white;
       background: linear-gradient(rgba(21, 9, 36, 1), rgba(20, 9, 34, .7), rgba(21, 9, 36, .7)), black;
       background-repeat: no-repeat;
-      overflow: auto;
+      overflow: hidden;
       height: auto;
       min-height: 100vh;
   }
@@ -122,7 +122,11 @@
     transition: 0.5s;
   }
   
-  
+  .cardhover{
+  	transform: scale(1.1);
+    transition: 0.3s;  	
+  	
+  }
   
   
 
