--- a/InternalUAMTv/InternalUAMTv/home/home.css
+++ b/InternalUAMTv/InternalUAMTv/home/home.css
@@ -143,13 +143,14 @@ span #detail {
 
 
 
-#split_right {
-
+#split_right {   
     margin-top: 119px;
     color: white;
     background: linear-gradient(rgba(21, 9, 36, 1), rgba(20, 9, 34, .7), rgba(21, 9, 36, .7)), black;
     background-size: 100%;
     background-repeat: no-repeat;
+    height: 100%;
+    background-size: cover;
 }
 
 
