--- a/InternalUAMTv/InternalUAMTv/home/home.css
+++ b/InternalUAMTv/InternalUAMTv/home/home.css
@@ -147,10 +147,8 @@ span #detail {
     margin-top: 119px;
     color: white;
     background: linear-gradient(rgba(21, 9, 36, 1), rgba(20, 9, 34, .7), rgba(21, 9, 36, .7)), black;
-    background-size: 100%;
+    background-size: 159vh;
     background-repeat: no-repeat;
-    height: 100%;
-    background-size: cover;
 }
 
 
