chnanges in home and detail screen

--- a/InternalUAMTv/InternalUAMTv/detail/detail.css
+++ b/InternalUAMTv/InternalUAMTv/detail/detail.css
@@ -533,3 +533,12 @@ transform-origin: 0 0; / see note above /
 .view_Section{
 	display : none;
 }
+.unsubscribeText{
+	font-size: 1.8rem;
+    color: rgba(255, 132, 0, 1);
+    font-weight: bold;
+    letter-spacing: 1px;
+    position: relative;
+    top: 1rem;
+}	
+	
