--- a/InternalUAMTv/InternalUAMTv/settings/settings.css
+++ b/InternalUAMTv/InternalUAMTv/settings/settings.css
@@ -469,4 +469,12 @@ color: white;
 .parent_right_section{
 	display: none;
 }
-    
+.unsubscribedUser{
+	position: absolute;
+    top: 33%;
+    left: 12%;
+    font-size: 45px;
+    font-weight: bold;
+    color: rgba(255, 132, 0, 1);
+    text-align: center;
+}
