--- a/InternalUAMTv/InternalUAMTv/home/home.css
+++ b/InternalUAMTv/InternalUAMTv/home/home.css
@@ -777,7 +777,7 @@ h2 {
 	}
 .unsubscribeText{
 	font-size: 1.8rem;
-    color: rgba(255, 132, 0, 1);
+    color: white;
     font-weight: bold;
     letter-spacing: 1px;
     position: relative;
